[package]
name = "salobj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = "0.14.0"
chrono = "0.4"
clap = { version = "3.0", features = ["derive"] }
kafka = "0.9"
num-traits = "0.2"
schema_registry_converter = { version = "3.0.0", features = ["avro"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.3.1"
tokio = { version = "1", features = ["full"] }
whoami = "^1.2"

[dev-dependencies]
num-bigint = "0.4"
